--- a/WebApplicationMVC/Views/Person/Edit.cshtml
+++ b/WebApplicationMVC/Views/Person/Edit.cshtml
@@ -6,13 +6,41 @@
 
 <h2>Edycja</h2>
 
-@using (Html.BeginForm()) {
+@using (Html.BeginForm())
+{
 
 	@Html.AntiForgeryToken()
 
 	<div class="form-horizontal">
 		<h4>Edycja danych</h4>
 		@Html.HiddenFor(model => model.PersonId)
+
+		<div class="form-group">
+			@Html.LabelFor(model => model.PersonName, htmlAttributes: new { @class ="control-label col-md-2" })
+			<div class="col-md-10">
+				@Html.EditorFor(model => model.PersonName, new { htmlAttributes = new {@class ="form-control"} })
+				@Html.ValidationMessageFor(model => model.PersonName, "", new {@class="text-danger"})
+			</div>
+		</div>
+
+		<div class="form-group">
+			@Html.LabelFor(model => model.PersonAge, htmlAttributes: new { @class ="control-label col-md-2" })
+			<div class="col-md-10">
+				@Html.EditorFor(model => model.PersonAge, new { htmlAttributes = new {@class ="form-control"} })
+				@Html.ValidationMessageFor(model => model.PersonAge, "", new {@class="text-danger"})
+			</div>
+		</div>
+
+		<div class="form-group">
+			<div class="col-md-12">
+				<input type="submit" value="Save" class="btn btn-info" />
+			</div>
+		</div>
+
 	</div>
 
 }
+
+<div>
+	@Html.ActionLink("Back to list", "Index")
+</div>
